# linear-sdk

./: CHANGELOG.md  Cargo.toml  README.md  schema.json
crates/linear_sdk/: README.md
crates/linear_sdk/src/: client.rs  client_generated.rs  graphql.rs  lib.rs
crates/linear_sdk/src/core/: types.rs
crates/linear_sdk/src/core/types/: api_key.rs
crates/linear_sdk/src/graphql/: custom_scalars.rs  generated.rs  issue.graphql
crates/linear_sdk_codegen/: Cargo.toml
crates/linear_sdk_codegen/src/: instrospection_schema.rs  introspection_schema.rs  main.rs
src/: client.rs  generated.rs  graphql.rs  lib.rs
src/graphql/: custom_scalars.rs  issue.graphql
