[package]
name = "linear_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
graphql_client = "0.11"
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "1.1", default-features = false, optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
ring = { version = "0.16", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
